Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ master:
   script:
   - echo 'Build Master'
   - cd /www/wwwroot/dev.zikri.web.id/
+  - git config --global --add safe.directory /www/wwwroot/dev.zikri.web.id
   - git pull origin master
   - echo "Cleaning Up"
   - sudo rm -rf /home/gitlab-runner/builds/*
@@ -18,6 +19,7 @@ development:
   script:
   - echo 'Build Dev'
   - cd /www/wwwroot/dev.zikri.web.id/
+  - git config --global --add safe.directory /www/wwwroot/dev.zikri.web.id
   - sudo git pull origin dev
   - echo "Cleaning Up"
   - sudo rm -rf /home/gitlab-runner/builds/*
