Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ master:
     - deploy
   script:
   - echo 'Build Master'
-  - cd /www/wwwroot/dev.zikri.web.id/
-  - git config --global --add safe.directory /www/wwwroot/dev.zikri.web.id
+  - cd /www/wwwroot/zikri.web.id/
+  - git config --global --add safe.directory /www/wwwroot/zikri.web.id
   - git pull origin master
   - echo "Cleaning Up"
   - sudo rm -rf /home/gitlab-runner/builds/*
