--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,8 @@ master:
   script:
   - echo 'Build Master'
   - cd /www/wwwroot/zikri.web.id/
-  - git config --global --add safe.directory /www/wwwroot/zikri.web.id
-  - git pull origin master
+  - sudo git config --global --add safe.directory /www/wwwroot/zikri.web.id
+  - sudo git pull origin master
   - echo "Cleaning Up"
   - sudo rm -rf /home/gitlab-runner/builds/*
   only:
@@ -19,7 +19,7 @@ development:
   script:
   - echo 'Build Dev'
   - cd /www/wwwroot/dev.zikri.web.id/
-  - git config --global --add safe.directory /www/wwwroot/dev.zikri.web.id
+  - sudo git config --global --add safe.directory /www/wwwroot/dev.zikri.web.id
   - sudo git pull origin dev
   - echo "Cleaning Up"
   - sudo rm -rf /home/gitlab-runner/builds/*
